syntax = "proto3";
// START GRPC OMIT
// START PROTOBUF OMIT
message SearchRequest {
  string query = 1;
}

message SearchResponse {
  repeated string items = 1;
}
// END PROTOBUF OMIT

service SearchService {
  rpc Search(SearchRequest) returns (SearchResponse) {}
}
// END GRPC OMIT
